--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
 	<title>Ritchley.com</title>
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="style1.css">
 </head>
+<STYLE>A {text-decoration: none;} </STYLE>
 <body>
 	<header>
 		<div class="container">
@@ -15,9 +16,9 @@
 		</div>
 		<nav>
 			<ul>
-				<li><a href="index.html>">Home</a><li>
-				<li><a href="links.html>">Links</a><li>
-				<li><a href="youtube.html>">Youtube</a><li>
+				<li><a href="index.html">Home</a><li>
+				<li><a href="links.html">Links</a><li>
+				<li><a href="https://www.youtube.com/channel/UCPUDmgwP7wMSDx6SLXJo09A">Youtube</a><li>
 			</ul>
 		</nav>
 	</div>
