--- a/links.html
+++ b/links.html
@@ -25,13 +25,13 @@
 	</header>
 	<section id="showcase">
 		<div class="container">
-			<h1><a href="https://www.ozbargain.com.au/">Ozbargin</a></h1>
+			<h1><a href="https://www.ozbargain.com.au/" target="blank">Ozbargin</a></h1>
 		
 		</div>
 	</section>
 	<section id="showcase">
 		<div class="container">
-			<h1><a href="https://mail.google.com/mail/u/0/">Inbox</a></h1>
+			<h1><a href="https://mail.google.com/mail/u/0/"	target="blank">Inbox</a></h1>
 		
 		</div>
 	</section>
