--- a/links.html
+++ b/links.html
@@ -18,7 +18,7 @@
 			<ul>
 				<li><a href="index.html">Home</a><li>
 				<li><a href="links.html">Links</a><li>
-				<li><a href="https://www.youtube.com/channel/UCPUDmgwP7wMSDx6SLXJo09A">Youtube</a><li>
+				<li><a href="https://www.youtube.com/channel/UCPUDmgwP7wMSDx6SLXJo09A" target="blank">Youtube</a><li>
 			</ul>
 		</nav>
 	</div>
