--- a/index.html
+++ b/index.html
@@ -1,17 +1,42 @@
 <!doctype html>
 <html>
 <head>
-<meta charset="utf-8">
-<title>index.html</title>
-<link href="style.css" rel="stylesheet" type="text/css">
-<script>var __adobewebfontsappname__="dreamweaver"</script>
-<script src="http://use.edgefonts.net/delius:n4:default.js" type="text/javascript"></script>
+    <meta charset="utf-8">
+    <title>&nbsp;Eat Right &amp; Live Strong</title>
+    <link href="style.css" rel="stylesheet" type="text/css">
+    <script>
+        var __adobewebfontsappname__ = "dreamweaver"
+    </script>
+    <script src="http://use.edgefonts.net/delius:n4:default;lancelot:n4:default;sirin-stencil:n4:default.js" type="text/javascript"></script>
 </head>
+
 <body>
-<header id="header"><h1>&nbsp;Eat Right &amp; Live Strong</h1>
-<br>
-<br>
-<img src="img/planner.png" width="100%" height="100%" alt=""/>
+<header id="header">
+<h1>&nbsp;Eat Right &amp; Live Strong</h1>
+        <p id="p1">
+            In 2020 health standards are falling due to sugar being added to everything that is not 100% natural. Around 1.7 million Australians have diabetes. That’s 14.5% (approx.) of the population that have been diagnosed with diabetes. To combat this, we as Australians need to start making better choices. Get the reduced sugar drink or taking the fruit instead of the chocolate bar. We also needed to inform ourselves about what truly is healthy not just listen to biased advertising. I have made a meal planner for a teenage boy.&nbsp; &nbsp; &nbsp;&nbsp;
+        </p>
+<img src="img/planner.png" width="100%" height="100%" alt="meal planner" />
+<h2 id="h2m">Monday:<h2/>
+<p id="p2">
+    <b>Breakfast:</b>
+    <br>
+    On Monday I have put 2 slices of toast with Vegemite. Vegemite is a thick, dark brown Australian food spread made from leftover brewers' yeast extract with various vegetable and spice additives. I have also put 1 cup of skim milk. Skimmed milk, is made when all the milkfat is removed from whole milk. It tends to contain around 0.1% fat.
+    <br>
+    <br>
+    <b>Lunch:</b>
+    <br>
+    For lunch is a ham and chese sandwich with wholemeal. I have chosen a ham and chese sandwich because it's relitivity healthy option for luch. Also a mineral water.
+    <br>
+    <br>
+    <b>Dinner:</b>
+    <br>
+    For dinner is spaghetti bolognese with grated parmesan chese and broccoli. Broccoli is a rich source of vitamins, minerals, and antioxidants. Antioxidants can help prevent the development of various conditions. It is low in calories but contains a wealth of nutrients and antioxidants that support many aspects of human health. Also a glass of tap water.
+    <br>
+    <br>
+    <b>Snack:</b>
+    <br>
+    For a light snack is popcorn, carrot &amp; celary sticks and herbal tea.</p>
 </header>
 </body>
 </html>
